fix #54: MavenCentralIT and ArtifactoryRepositoryIT run out-of-the-box